@@ -41,6 +41,7 @@ Trunk (unreleased changes)
                (Bryan Duxbury via Stack)
    HADOOP-2295 Fix assigning a region to multiple servers
    HADOOP-2234 TableInputFormat erroneously aggregates map values
+   HADOOP-2308 null regioninfo breaks meta scanner
 
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
